modified Code First HW

--- a/Telerik-Databases-Homeworks/13. Entity Framework Code First/StudentSystem/StudentSystem.ConsoleClient/StudentSystem.ConsoleClient.csproj
+++ b/Telerik-Databases-Homeworks/13. Entity Framework Code First/StudentSystem/StudentSystem.ConsoleClient/StudentSystem.ConsoleClient.csproj
@@ -51,7 +51,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Startup.cs" />
+    <Compile Include="Startup.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
