--- a/Telerik-Databases-Homeworks/13. Entity Framework Code First/StudentSystem/StudentSystem.Data/StudentSystem.Data.csproj
+++ b/Telerik-Databases-Homeworks/13. Entity Framework Code First/StudentSystem/StudentSystem.Data/StudentSystem.Data.csproj
@@ -49,7 +49,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Migrations\201510231538063_Initial.cs" />
+    <Compile Include="Migrations\201510231538063_Initial.Designer.cs">
+      <DependentUpon>201510231538063_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentStystemDbContext.cs" />
   </ItemGroup>
@@ -62,6 +68,11 @@
       <Project>{7bedb274-73b3-4601-ab82-5111528d0848}</Project>
       <Name>StudentSystem.Models</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201510231538063_Initial.resx">
+      <DependentUpon>201510231538063_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
